# openglasteroids

./: CMakeLists.txt  README.md
Game/: Game.cpp  GameObject.cpp
OpenGLEngine/: GLFWWindowDestructorClass.cpp  Sprite.cpp  Texture.cpp  TextureContainer.cpp
inc/Game/: Asteroid.h  CollisionBox2D.h  Game.h  GameObject.h  Spaceship.h
inc/OpenGLEngine/: Camera.h  GLFWWindowDestructorClass.h  Mesh.h  Model.h  Shader.h  Sprite.h  Texture.h  TextureContainer.h  UserPreferences.h  Window.h
inc/glad/: glad.h
inc/stb/: stb_image.h
res/models/: asteroid.mtl  spaceship.mtl
res/shaders/: Interface.fragment.glsl  Lighting.vertex.glsl  Model.fragment.glsl
src/: main.cpp
src/Game/: Asteroid.cpp  CollisionBox.cpp  Spaceship.cpp
src/OpenGLEngine/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  UserPreferences.cpp  Window.cpp
src/glad/: glad.c
